Use explicit `&mdash;`s.
- Addresses https://github.com/aosabook/500lines/issues/203.

--- a/tex/blockcode.tex
+++ b/tex/blockcode.tex
@@ -8,7 +8,7 @@ type words and symbols.
 Learning a programming language can be difficult because they are
 extremely sensitive to even the slightest of typos. Most programming
 languages are case-sensitive, have obscure syntax, and will refuse to
-run if you get so much as a semicolon in the wrong place --- or worse,
+run if you get so much as a semicolon in the wrong place---or worse,
 leave one out. Further, most programming languages in use today are
 based on English and their syntax cannot be localized.
 
@@ -164,7 +164,7 @@ There are eight source files in this project, but \texttt{index.html}
 and \texttt{blocks.css} are basic structure and style for the app and
 won't be discussed. Two of the JavaScript files won't be discussed in
 any detail either: \texttt{util.js} contains some helpers and serves as
-a bridge between different browser implementations --- similar to a
+a bridge between different browser implementations---similar to a
 library like jQuery but in less than 50 lines of code. \texttt{file.js}
 is a similar utility used for loading and saving files and serializing
 scripts.
