--- a/tex/image-filters.tex
+++ b/tex/image-filters.tex
@@ -15,10 +15,10 @@ at \href{http://www.catehuston.com/blog/}{Accidentally in Code} and is
 Brilliant)}\label{a-brilliant-idea-that-wasnt-all-that-brilliant}
 
 When I was traveling in China I often saw series of four paintings
-showing the same place in different seasons. Color --- the cool whites
-of winter, pale hues of spring, lush greens of summer, and reds and
-yellows of fall --- is what visually differentiates the seasons. Around
-2011, I had what I thought was a brilliant idea: I wanted to be able to
+showing the same place in different seasons. Color---the cool whites of
+winter, pale hues of spring, lush greens of summer, and reds and yellows
+of fall---is what visually differentiates the seasons. Around 2011, I
+had what I thought was a brilliant idea: I wanted to be able to
 visualize a photo series as a series of colors. I thought it would show
 travel, and progression through the seasons.
 
@@ -58,8 +58,8 @@ University, and later work, filled up my time with other people's ideas
 and priorities. Part of finishing this project was learning how to carve
 out time to make progress on my own ideas; I required about four hours
 of good mental time a week. A tool that allowed me to move faster was
-therefore really helpful, even necessary --- although it came with its
-own set of problems, especially around writing tests.
+therefore really helpful, even necessary---although it came with its own
+set of problems, especially around writing tests.
 
 I felt that thorough tests were especially important for validating how
 the project was working, and for making it easier to pick up and resume
@@ -101,7 +101,7 @@ digital terms), it was a process that took weeks.
 
 In the old days, we would take the picture, then when we had used a
 whole roll of film, we would take it in to be developed (often at the
-pharmacy). We'd pick up the developed pictures some days later --- and
+pharmacy). We'd pick up the developed pictures some days later---and
 discover that there was something wrong with many of them. Hand not
 steady enough? Random person or thing that we didn't notice at the time?
 Overexposed? Underexposed? Of course by then it was too late to remedy
