--- a/tex/pedometer.tex
+++ b/tex/pedometer.tex
@@ -150,11 +150,11 @@ In our simple example, gravitational acceleration is 0 in $x(t)$ and
 $z(t)$ and constant at 9.8 $m/s^2$ in $y(t)$. Therefore, in our total
 acceleration plot, $x(t)$ and $z(t)$ fluctuate around 0 while $y(t)$
 fluctuates around -1 \emph{g}. In our user acceleration plot, we notice
-that --- because we have removed gravitational acceleration --- all
-three time series fluctuate around 0. Note the obvious peaks in
-$y_{u}(t)$. Those are due to step bounces! In our last plot,
-gravitational acceleration, $y_{g}(t)$ is constant at -1 \emph{g}, and
-$x_{g}(t)$ and $z_{g}(t)$ are constant at 0.
+that---because we have removed gravitational acceleration---all three
+time series fluctuate around 0. Note the obvious peaks in $y_{u}(t)$.
+Those are due to step bounces! In our last plot, gravitational
+acceleration, $y_{g}(t)$ is constant at -1 \emph{g}, and $x_{g}(t)$ and
+$z_{g}(t)$ are constant at 0.
 
 So, in our example, the 1-dimensional user acceleration in the direction
 of gravity time series we're interested in is $y_{u}(t)$. Although
@@ -648,8 +648,8 @@ entire process from input to output can be viewed as a pipeline
 \aosafigure[240pt]{pedometer-images/pipeline.png}{The pipeline}{500l.pedometer.pipeline}
 
 In the spirit of separation of concerns, we'll write the code for each
-distinct component of the pipeline --- parsing, processing, and
-analyzing --- individually.
+distinct component of the pipeline---parsing, processing, and
+analyzing---individually.
 
 \aosasectii{Parsing}\label{parsing}
 
