--- a/tex/spreadsheet.tex
+++ b/tex/spreadsheet.tex
@@ -1,11 +1,8 @@
 \begin{aosachapter}{Web Spreadsheet}{s:spreadsheet}{Audrey Tang}
 
-This chapter introduces a
-\href{http://audreyt.github.io/500lines/spreadsheet/}{web spreadsheet}
-written in
-\href{https://github.com/audreyt/500lines/tree/master/spreadsheet/code}{99
-lines} of the three languages natively supported by web browsers: HTML,
-JavaScript, and CSS.
+This chapter introduces a web spreadsheet written in 99 lines of the
+three languages natively supported by web browsers: HTML, JavaScript,
+and CSS.
 
 The ES5 version of this project is available as a
 \href{http://jsfiddle.net/audreyt/LtDyP/}{jsFiddle}.
