--- a/tex/web-server.tex
+++ b/tex/web-server.tex
@@ -408,12 +408,12 @@ uses our existing \texttt{send\_content} to send it back to the client:
             self.handle_error(msg)
 \end{verbatim}
 
-Note that we open the file in binary mode --- the `b' in `rb' --- so
-that Python won't try to ``help'' us by altering byte sequences that
-look like a Windows line ending. Note also that reading the whole file
-into memory when serving it is a bad idea in real life, where the file
-might be several gigabytes of video data. Handling that situation is
-outside the scope of this chapter.
+Note that we open the file in binary mode---the `b' in `rb'---so that
+Python won't try to ``help'' us by altering byte sequences that look
+like a Windows line ending. Note also that reading the whole file into
+memory when serving it is a bad idea in real life, where the file might
+be several gigabytes of video data. Handling that situation is outside
+the scope of this chapter.
 
 To finish off this class, we need to write the error handling method and
 the template for the error reporting page:
