--- a/tex/static-analysis.tex
+++ b/tex/static-analysis.tex
@@ -12,7 +12,7 @@ Static analysis is a way to check for problems in your code without
 running it. ``Static'' means at compile time rather than at run time,
 and ``analysis'' means we're analyzing the code. When you've used the
 tools I mentioned above, it may have felt like magic. But those tools
-are just programs --- they are made of source code that was written by a
+are just programs---they are made of source code that was written by a
 person, a programmer like you. In this chapter, we're going to talk
 about how to implement a couple of static analysis checks. In order to
 do this, we need to know what we want the check to do and how we want to
@@ -390,10 +390,9 @@ I'm going to tackle the last question first, since this whole endeavour
 hinges on it. We've looked at an unstable function and seen, as
 programmers, how to identify an unstable variable, but we need our
 program to find them. This sounds like it would require simulating the
-function to look for variables whose values might change --- which
-sounds like it would take some work. Luckily for us, Julia's type
-inference already traces through the function's execution to determine
-the types.
+function to look for variables whose values might change---which sounds
+like it would take some work. Luckily for us, Julia's type inference
+already traces through the function's execution to determine the types.
 
 The type of \texttt{sum} in \texttt{unstable} is
 \texttt{Union(Float64,Int64)}. This is a \texttt{UnionType}, a special
@@ -415,8 +414,8 @@ our control and that sometimes feel clumsy or ugly.
 Besides all the work we'll save by not having to parse the code by
 ourselves, working with the same data structures that the compiler uses
 means that our checks will be based on an accurate assessment of the
-compilers understanding --- which means our check will be consistent
-with how the code actually runs.
+compilers understanding---which means our check will be consistent with
+how the code actually runs.
 
 This process of examining Julia code from Julia code is called
 introspection. When you or I introspect, we're thinking about how and
@@ -1020,7 +1019,7 @@ many dynamic languages don't require declarations and thus need an extra
 layer of analysis to catch them.
 
 We can find misspelled variable names (and other unused variables) by
-looking for variables that are only used once --- or only used one way.
+looking for variables that are only used once---or only used one way.
 
 Here is an example of a little bit of code with one misspelled name.
 
@@ -1039,15 +1038,15 @@ This kind of mistake can cause problems in your code that are only
 discovered when it's run. Let's assume you misspell each variable name
 only once. We can separate variable usages into writes and reads. If the
 misspelling is a write (i.e., \texttt{worng = 5}), then no error will be
-thrown; you'll just be silently putting the value in the wrong variable
---- and it could be frustrating to find the bug. If the misspelling is a
-read (i.e., \texttt{right = worng + 2}), then you'll get a runtime error
-when the code is run; we'd like to have a static warning for this, so
-that you can find this error sooner, but you will still have to wait
-until you run the code to see the problem.
+thrown; you'll just be silently putting the value in the wrong
+variable---and it could be frustrating to find the bug. If the
+misspelling is a read (i.e., \texttt{right = worng + 2}), then you'll
+get a runtime error when the code is run; we'd like to have a static
+warning for this, so that you can find this error sooner, but you will
+still have to wait until you run the code to see the problem.
 
 As code becomes longer and more complicated, it becomes harder to spot
-the mistake --- unless you have the help of static analysis.
+the mistake---unless you have the help of static analysis.
 
 \aosasectii{Left-Hand Side and Right-Hand
 Side}\label{left-hand-side-and-right-hand-side}
@@ -1379,7 +1378,7 @@ check_locals(e::Expr) = isempty(unused_locals(e))
 
 \aosasecti{Conclusion}\label{conclusion}
 
-We've done two static analyses of Julia code --- one based on types and
+We've done two static analyses of Julia code---one based on types and
 one based on variable usages.
 
 Statically-typed languages already do the kind of work our type-based
